<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tempo Tapper</string>
    <string name="app_settings_name">Tempo Tapper Settings</string>
    <string name="button_tap">Tap</string>
    <string name="button_reset">Reset</string>
    <string name="bpm_suffix">\u0020BPM</string>
    <string name="bpm_default">0 BPM</string>
    <string name="menu_settings">Settings</string>
    <string name="rate_title">Rate Tempo Tapper</string>
    <string name="rate_message">You\'ve been using Tempo Tapper a lot. Would you like to rate it?</string>
    <string name="rate_yes">Yes</string>
    <string name="rate_later">Later</string>
    <string name="rate_no">Never</string>
    <string name="pref_title_about">About</string>
    <string name="pref_title_dev_home">Developer homepage</string>
    <string name="pref_title_feedback">Feedback</string>
    <string name="pref_summary_auto_reset">Reset automatically after two beats</string>
    <string name="pref_title_auto_reset">Auto reset</string>
</resources>
