<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <TextView
            android:id="@+id/text_bpm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="24sp"
            android:text="@string/bpm_default"
            />
    <Button
            android:id="@+id/button_tap"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_tap"
            />
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_reset"
            android:onClick="reset"
            />
</LinearLayout>

